--- a/main.html
+++ b/main.html
@@ -4,5 +4,28 @@
   </head>
   <body>
     <!-- Write your code here -->
+	  <div class="main">
+		  <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="img">
+		  <p>Facebook helps you connect and share with the people in your life.</p>
+	  </div>
+	  <section class="left">
+		  <div class="main">
+		  <form action="#" method="post" >
+			  <label for="email"></label>
+              <input type="text" id="email" name="email" placeholder="Email address or phone number" required>
+
+			  <label for="password"></label>
+			  <input type ="password" id="pssword" placeholder="Password">
+
+			  <button type="submit">Log in</button>
+			  <a href="#">Forgotten account?</a>
+
+			  <button class="signup">Create new account</button>
+		  </form>
+		
+
+	  </div>
+	  </section>
+	  
   </body>
 </html>
