--- a/main.html
+++ b/main.html
@@ -17,7 +17,7 @@
 			  <label for="password"></label>
 			  <input type ="password" id="pssword" placeholder="Password">
 
-			  <button type="submit">Log in</button>
+			  <button id="button"type="submit">Log in</button>
 			  <a href="#">Forgotten account?</a>
 
 			  <button class="signup">Create new account</button>
