--- a/main.html
+++ b/main.html
@@ -4,18 +4,21 @@
   </head>
   <body>
     <!-- Write your code here -->
-	  <div class="main">
+	  <section class="left">
+		  <div class="main">
 		  <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="img">
 		  <p>Facebook helps you connect and share with the people in your life.</p>
 	  </div>
-	  <section class="left">
+	  </section>
+	  
+	  <section class="right">
 		  <div class="main">
 		  <form action="#" method="post" >
 			  <label for="email"></label>
               <input type="text" id="email" name="email" placeholder="Email address or phone number" required>
 
 			  <label for="password"></label>
-			  <input type ="password" id="pssword" placeholder="Password">
+			  <input type ="password" id="password" placeholder="Password">
 
 			  <button id="button"type="submit">Log in</button>
 			  <a href="#">Forgotten account?</a>
