--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <!-- Write your code here -->
 	  <section class="left">
 		  <div class="main">
-		  <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="img">
+		  <img src="https://static.xx.fbcdn.net/rsrc.php/y8/r/dF5SId3UHWd.svg" alt="Facebook logo">
 		  <p>Facebook helps you connect and share with the people in your life.</p>
 	  </div>
 	  </section>
